--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 html, body {
     height: 100%;
     font-family: 'Noto Sans TC', sans-serif;
@@ -35,7 +34,7 @@ html, body {
 
 .profile-footer {
     position: absolute;
-    bottom: 5px;
+    bottom: 0;
     background-color: white;
     width: 100%;
     opacity: 0.5;
@@ -44,6 +43,8 @@ html, body {
 
 .profile-icon {
     position: relative;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    height: 200px;
 }
 
 .profile-level {
@@ -54,6 +55,7 @@ html, body {
 .rank-wrapper {
     display: flex;
     flex-flow: row wrap;
+    justify-content: center;
 }
 
 .rank-text, .rank-queue {
@@ -76,4 +78,8 @@ html, body {
     border: 1px solid #ebebeb;
     border-radius:1px;
     width: 78%;
+}
+
+.section {
+    margin-top: 10px;
 }
