--- a/styles.css
+++ b/styles.css
@@ -202,11 +202,10 @@ html, body {
     display: none;
 }
 
-.items > div:hover span {
+.items > img:hover + span {
     position: absolute;
     display: block;
     width: 100px;
-    bottom: -45px;
     padding: 10px;
     background-color: #333;
     color: #fff;
