--- a/styles.css
+++ b/styles.css
@@ -3,16 +3,31 @@
     --color-darkblue: #1961FB;
     --color-red: #FF635C;
     --color-darkred: #FF3C31;
+    --primary-color: #19b5fe;
+    --primary-dark-color: #2574a9;
+    --secondary-color: #3a539b;
+    --background-color: #e4f1fe;
+    --ff-ui: montserrat;
+}
+
+input {
+    font-family: 'Noto Sans TC', sans-serif;
 }
 
 html, body {
     font-family: 'Noto Sans TC', sans-serif;
+    background-color: var(--background-color);
+    margin: 0;
 }
 
 .header {
     grid-area: header;
     text-align: center;
-    background-color: #6200EE;
+    background-color: var(--primary-color);
+    position: fixed;
+    width: 100%;
+    height: 70px;
+    z-index: 10;
 }
 
 .search-wrapper {
@@ -27,21 +42,32 @@ html, body {
 #input-name {
     border: 0;
     outline: 0;
-    border-bottom: 1px solid;
+    padding: 0;
+    margin: 0;
+    font-size: 16px;
+}
+
+#input-name:focus {
+    border-bottom: 2px solid var(--secondary-color);
 }
 
 .aside, .main {
     margin-top: 20px;
+    background-color: #fff;
+    border: 0;
+    border-radius: 15px;
+    padding: 20px;
 }
 
 .aside {
     grid-area: aside;
-    padding-left: 100px;
+    margin-left: 20px;
 }
 
 .main {
     grid-area: main;
     margin-left: 20px;
+    margin-right: 20px;
 }
 
 .container {
@@ -56,6 +82,15 @@ html, body {
 
 .profile-name {
     margin-top: 0;
+    text-align: center;
+}
+
+.recent-games {
+    margin-top: 0!important;
+}
+
+.recent-games > .section-header {
+    padding-bottom: 5px;
 }
 
 .profile-footer {
@@ -71,6 +106,8 @@ html, body {
     position: relative;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     height: 200px;
+    width: 200px;
+    margin: 0 auto;
 }
 
 .profile-level {
@@ -107,7 +144,7 @@ html, body {
     display: inline-block;
     border: 1px solid #ebebeb;
     border-radius:1px;
-    width: 78%;
+    width: 85%;
     vertical-align: middle;
 }
 
@@ -118,10 +155,18 @@ html, body {
 .match {
     display: flex;
     flex-flow: row wrap;
-    border-bottom: 1px solid lightgray;
     margin-top: 5px;
-    padding-bottom: 5px;
     text-align: center;
+    padding: 10px;
+    background-color: aliceblue;
+}
+
+.match.defeat {
+    border: 5px solid var(--color-red);
+}
+
+.match.victory {
+    border: 5px solid var(--color-blue);
 }
 
 .match > *:not(:first-child) {
@@ -130,6 +175,11 @@ html, body {
 
 .score .deaths {
     color: red;
+}
+
+.result {
+    font-weight: bold;
+    padding: 5px 0;
 }
 
 .match.victory .result {
@@ -145,10 +195,11 @@ html, body {
 }
 
 .matches-wrapper {
-    height: 350px;
+    height: 400px;
     overflow: scroll;
     overflow-x: hidden;
     box-shadow: 0 4px 2px -2px lightgrey;
+    padding-right: 10px;
 }
 
 .match-status {
@@ -235,4 +286,35 @@ html, body {
 
 .items img.no-image {
     border: 1px solid lightgray;
+}
+
+.score, .stats {
+    width: 100px;
+}
+
+#search-btn {
+    cursor: pointer;
+    color: gray;
+    padding: 10px 5px;
+}
+
+#search-btn:hover {
+    color: var(--secondary-color)
+}
+
+
+.btn {
+    padding: 10px 20px;
+    background-color: var(--secondary-color);
+    color: #fff;
+    border: 1px solid var(--secondary-color);
+    border-radius: 10px;
+    outline: 0;
+    cursor: pointer;
+    font-family: montserrat;
+}
+
+.btn:hover {
+    background-color: #fff;
+    color: var(--secondary-color);
 }
