--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@ html, body {
     width: 100%;
     height: 70px;
     z-index: 10;
+    transition: height 0.25s linear;
 }
 
 .search-wrapper {
@@ -37,6 +38,7 @@ html, body {
     margin: 10px auto 0 auto;
     border: 0;
     border-radius: 15px;
+    transition: margin-top 0.25s linear, background-color 0.25s linear;
 }
 
 #input-name {
@@ -46,19 +48,19 @@ html, body {
     margin: 0;
     font-size: 16px;
     width: 200px;
-    transition: width 0.25s linear;
-}
-
-#input-name.empty {
-    width: 50px;
-}
-
-#input-name:focus {
-    width: 200px;
+    transition: width 0.25s linear, background-color 0.25s linear;
 }
 
 #input-name:focus {
     border-bottom: 2px solid var(--secondary-color);
+}
+
+.loading-wrapper {
+    display: none;
+}
+
+.container.hide .search-wrapper {
+    margin-top: 25%;
 }
 
 .aside, .main {
@@ -67,6 +69,19 @@ html, body {
     border: 0;
     border-radius: 15px;
     padding: 20px;
+    transition: opacity 0.25s linear;
+}
+
+.container.hide .aside, .container.hide .main {
+    opacity: 0;
+}
+
+.container.hide .header {
+    height: 100%;
+}
+
+.container.loading .search-wrapper, .container.loading .search-wrapper input {
+    background-color: #e9e9e9;
 }
 
 .aside {
