--- a/styles.css
+++ b/styles.css
@@ -8,14 +8,15 @@
     --secondary-color: #3a539b;
     --background-color: #e4f1fe;
     --ff-ui: montserrat;
+    --ff-general: 'Noto Sans TC', sans-serif; 
 }
 
 input {
-    font-family: 'Noto Sans TC', sans-serif;
+    font-family: var(--ff-general);
 }
 
 html, body {
-    font-family: 'Noto Sans TC', sans-serif;
+    font-family: var(--ff-general);
     background-color: var(--background-color);
     margin: 0;
 }
@@ -29,16 +30,18 @@ html, body {
     height: 70px;
     z-index: 10;
     transition: height 0.25s linear;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .search-wrapper {
     padding: 10px;
     background: #fff;
-    width: fit-content;
-    margin: 10px auto 0 auto;
+    width: 250px;
     border: 0;
     border-radius: 15px;
-    transition: margin-top 0.25s linear, background-color 0.25s linear;
+    transition: background-color 0.25s linear;
 }
 
 #input-name {
@@ -47,8 +50,7 @@ html, body {
     padding: 0;
     margin: 0;
     font-size: 16px;
-    width: 200px;
-    transition: width 0.25s linear, background-color 0.25s linear;
+    transition: background-color 0.25s linear;
 }
 
 #input-name:focus {
@@ -57,10 +59,6 @@ html, body {
 
 .loading-wrapper {
     display: none;
-}
-
-.container.hide .search-wrapper {
-    margin-top: 25%;
 }
 
 .aside, .main {
