--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,19 @@ html, body {
     margin: 0;
 }
 
+.right-nav {
+    margin-top: 5px;
+    margin-left: 10px;
+}
+
+.profile-btn {
+    font-size: 24px;
+    color: white;
+    border: 1px solid white;
+    border-radius: 5px;
+    padding: 0 5px;
+}
+
 .header {
     grid-area: header;
     text-align: center;
@@ -33,6 +46,15 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.container:not(.hide) .header-content {
+    display: flex;
+    flex-flow: row wrap;
+}
+
+.container.hide .right-nav {
+    display: none;
 }
 
 .search-wrapper {
