--- a/styles.css
+++ b/styles.css
@@ -23,15 +23,13 @@ html, body {
 }
 
 .right-nav {
-    margin-top: 5px;
-    margin-left: 10px;
+    float: right;
+    margin-right: 20px;
 }
 
-.profile-btn {
+.settings-btn {
     font-size: 24px;
     color: white;
-    border: 1px solid white;
-    border-radius: 5px;
     padding: 0 5px;
 }
 
@@ -50,8 +48,7 @@ html, body {
 }
 
 .container:not(.hide) .header-content {
-    display: flex;
-    flex-flow: row wrap;
+    width: 100%;
 }
 
 .container.hide .right-nav {
@@ -65,6 +62,8 @@ html, body {
     border: 0;
     border-radius: 15px;
     transition: background-color 0.25s linear;
+    float: left;
+    margin-left: calc(50% - 125px);
 }
 
 #input-name {
@@ -398,11 +397,11 @@ html, body {
     color: black;
 }
 
-.profile-form:not(.show) {
+.settings-form:not(.show) {
     display: none;
 }
 
-.profile-form {
+.settings-form {
     position: fixed;
     top: calc(50% - 120px);
     left: calc(50% - 220px);
@@ -418,13 +417,17 @@ html, body {
     flex-flow: column nowrap;
 }
 
-.profile-form .close-btn {
+.settings-form .close-btn {
     text-align: right;
     color: var(--alert-color);
     font-size: 24px;
 }
 
-.profile-form .save-btn {
+.settings-form .save-btn {
     text-decoration: none;
     color: var(--secondary-color);
+}
+
+.favorite-btn {
+    color: gold;
 }
