--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ html, body {
 .header {
     grid-area: header;
     text-align: center;
-    background-color: var(--primary-color);
+    background: radial-gradient(circle, rgba(25,181,254,1) 0%, rgba(58,83,155,1) 100%);
     position: fixed;
     width: 100%;
     height: 70px;
