--- a/styles.css
+++ b/styles.css
@@ -251,7 +251,7 @@ html, body {
     overflow: scroll;
     overflow-x: hidden;
     box-shadow: 0 4px 2px -2px lightgrey;
-    padding-right: 10px;
+    padding: 10px;
 }
 
 .match-status {
@@ -353,23 +353,6 @@ html, body {
 
 #search-btn:hover {
     color: var(--secondary-color)
-}
-
-
-.btn {
-    padding: 10px 20px;
-    background-color: var(--secondary-color);
-    color: #fff;
-    border: 1px solid var(--secondary-color);
-    border-radius: 10px;
-    outline: 0;
-    cursor: pointer;
-    font-family: montserrat;
-}
-
-.btn:hover {
-    background-color: #fff;
-    color: var(--secondary-color);
 }
 
 .section-content.matches-wrapper::-webkit-scrollbar {
@@ -516,4 +499,33 @@ html, body {
 
 .match > div:not(:first-child) {
     margin-top: 10px;
+}
+
+.btn {
+    outline: 5px solid rgba(34, 193, 195, 0.2);
+    text-decoration: none;
+    padding: 10px;
+    background-color: rgba(34, 193, 195, 0.8);
+    color: white;
+    display: block;
+    margin: 10px 5px;
+    text-align: center;
+}
+
+.btn:hover {
+    outline: 5px solid rgba(253, 187, 45, 0.2);
+    background-color: rgba(253, 187, 45, 0.8);
+}
+
+@keyframes rotating {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.spinning > * {
+    animation: rotating 2s linear infinite;
 }
