--- a/styles.css
+++ b/styles.css
@@ -360,6 +360,10 @@ html, body {
     background-color: lightgray;
 }
 
+.tooltip-content span.small {
+    font-size: 8px;
+}
+
 .tooltip:hover + .tooltip-content {
     display: block;
 }
@@ -684,4 +688,18 @@ select {
     color: #333;
     font-weight: bolder;
     font-size: 14px;
+}
+
+.damage-meter {
+    border: 1px solid var(--color-red);
+    height: 20px;
+    margin-top: 5px;
+}
+
+.damage {
+    height: 100%;
+    width: 50%;
+    background-color: var(--color-darkred);
+    color: white;
+    font-size: 11px;
 }
