--- a/styles.css
+++ b/styles.css
@@ -427,10 +427,10 @@ html, body {
     color: black;
     text-align: left;
     text-overflow: ellipsis;
-    overflow: hidden;
     white-space: nowrap;
     width: 100%;
     display: block;
+    height: 20px;
 }
 
 .summoner-champ-icon {
