--- a/styles.css
+++ b/styles.css
@@ -301,15 +301,15 @@ html, body {
 }
 
 .summoner-spells img, .runes img {
-    width: 32px;
-    height: 32px;
+    width: 30px;
+    height: 30px;
     display: inline-block;
     border: 0;
     border-radius: 3px;
 }
 
-.summoner-spells img:last-child {
-    margin-top: 1px;
+.summoner-spells :last-child {
+    margin-top: 4px;
 }
 
 .additional-info img {
@@ -353,7 +353,7 @@ html, body {
 .tooltip-content {
     display: none;
     position: absolute;
-    width: max-content;
+    width: 200px;
     padding: 10px;
     background-color: #333;
     color: #fff;
@@ -741,6 +741,7 @@ select {
 
 .recently-summoner .summoner {
     border-bottom: 2px solid #3A1C71;
+    height: unset;
 }
 
 .recently-summoner .recently-times {
