--- a/styles.css
+++ b/styles.css
@@ -801,3 +801,37 @@ img {
     top: 5px;
     right: 20px;
 }
+
+.player-info {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+}
+
+.player-score > span {
+    display: block;
+}
+
+.player-name {
+    margin: auto 0;
+    width: 100px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.match-details-content .team:last-child .player-info {
+    flex-flow: row-reverse;
+}
+
+.match-details-content {
+    display: flex;
+    flex-flow: row wrap;
+    margin-top: 50px;
+    font-size: 14px;
+    justify-content: space-between;
+}
+
+.match-details-content .team {
+    flex: 0 0 45%;
+}
