--- a/styles.css
+++ b/styles.css
@@ -782,9 +782,9 @@ img {
 .match-details-container {
     position: fixed;
     top: calc(50% - 270px);
-    left: calc(50% - 520px);
+    left: calc(50% - 675px);
     z-index: 100;
-    width: 1000px;
+    width: 1350px;
     height: 500px;
     padding: 20px;
     background-color: white;
@@ -797,15 +797,12 @@ img {
 .match-details-container .close-btn {
     color: var(--alert-color);
     font-size: 24px;
-    position: absolute;
-    top: 5px;
-    right: 20px;
+    float: right;
 }
 
 .player-info {
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-between;
 }
 
 .player-score > span {
@@ -820,10 +817,6 @@ img {
     overflow: hidden;
 }
 
-.match-details-content .team:last-child .player-info {
-    flex-flow: row-reverse;
-}
-
 .match-details-content {
     display: flex;
     flex-flow: row wrap;
@@ -832,6 +825,57 @@ img {
     justify-content: space-between;
 }
 
+.match-details-content .champion-image img {
+    height: 64px;
+    width: 64px;
+}
+
+.match-details-content .summoner-spells img, .match-details-content .summoner-spells > div,
+.match-details-content .runes img, .match-details-content .runes > div {
+    height: 31px;
+    width: 31px;
+}
+
+.match-details-content .summoner-spells > :last-child,
+.match-details-content .runes > :last-child {
+    margin-top: 2px;
+}
+
+.summoner-info {
+    margin: auto 0;
+}
+
+.player-name {
+    text-align: left;
+    padding-left: 5px;
+    font-size: 12px;
+}
+
+.match-details-content .stats {
+    width: 170px;
+    display: flex;
+    flex-flow: row wrap;
+}
+
+.match-details-content .rank , .match-details-content .score {
+    flex: 0 0 50%;
+    height: fit-content;
+}
+
+.match-details-content .damage-container {
+    flex: 0 0 100%;
+}
+
 .match-details-content .team {
-    flex: 0 0 45%;
+    flex: 0 0 48%;
+}
+
+.match-details-content .team-separator {
+    height: 100%;
+    width: 5px;
+    background-color: #e9e9e9;
+}
+
+.player-score {
+    width: 80px;
 }
