--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,7 @@ html, body {
     height: 200px;
     width: 200px;
     margin: 0 auto;
+    user-select: none;
 }
 
 .profile-level {
@@ -628,6 +629,7 @@ html, body {
 .filter-container {
     flex: 0 0 50%;
     border-right: 2px solid #ebebeb;
+    margin: auto 0;
 }
 
 .filter-btn {
@@ -686,6 +688,7 @@ select {
 .mastery-image-wrapper {
     width: 84px;
     height: 80px;
+    user-select: none;
 }
 
 .mastery-image-wrapper img {
