--- a/src/App.css
+++ b/src/App.css
@@ -9,13 +9,13 @@
   --background-color: #e4f1fe;
   --alert-color: #f783ac;
   --ff-ui: montserrat;
-  --ff-general: 'Noto Sans TC', sans-serif; 
+  --ff-general: 'Noto Sans TC', sans-serif;
 }
 
 *,
 *::before,
 *::after {
-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 img {
@@ -26,7 +26,8 @@ input {
   font-family: var(--ff-general);
 }
 
-html, body {
+html,
+body {
   font-family: var(--ff-general);
   background: linear-gradient(90deg, #00C9FF 0%, #92FE9D 100%);
   margin: 0;
@@ -114,7 +115,8 @@ html, body {
   color: transparent;
 }
 
-.aside, .main {
+.aside,
+.main {
   margin-top: 20px;
   background-color: #fff;
   outline: 5px solid rgba(255, 255, 255, 0.5);
@@ -122,7 +124,10 @@ html, body {
   transition: opacity 0.25s linear;
 }
 
-.container.hide .aside, .container.hide .main, .container:not(.profile-loaded) .aside, .container:not(.profile-loaded) .main {
+.container.hide .aside,
+.container.hide .main,
+.container:not(.profile-loaded) .aside,
+.container:not(.profile-loaded) .main {
   opacity: 0;
 }
 
@@ -153,10 +158,10 @@ html, body {
   display: grid;
   grid-template-columns: 300px auto;
   grid-template-rows: 70px auto 70px;
-  grid-template-areas: 
-  "header header"
-  "aside main"
-  "footer footer";
+  grid-template-areas:
+    "header header"
+    "aside main"
+    "footer footer";
   height: 100%;
 }
 
@@ -166,10 +171,10 @@ html, body {
 }
 
 .recent-games {
-  margin-top: 0!important;
+  margin-top: 0 !important;
 }
 
-.recent-games > .section-header {
+.recent-games>.section-header {
   padding-bottom: 5px;
 }
 
@@ -202,7 +207,8 @@ html, body {
   justify-content: center;
 }
 
-.rank-text, .rank-queue {
+.rank-text,
+.rank-queue {
   font-size: 12px;
 }
 
@@ -249,15 +255,7 @@ html, body {
   background-color: aliceblue;
 }
 
-.match.defeat {
-  border: 5px solid var(--color-red);
-}
-
-.match.victory {
-  border: 5px solid var(--color-blue);
-}
-
-.match > *:not(:first-child) {
+.match>*:not(:first-child) {
   margin-left: 10px;
 }
 
@@ -265,22 +263,6 @@ html, body {
   color: red;
 }
 
-.result {
-  font-weight: bold;
-  padding: 5px 0;
-}
-
-.match.victory .result {
-  color: var(--color-blue);
-}
-
-.match.defeat .result {
-  color: var(--color-red);
-}
-
-.match-info {
-  width: 100px;
-}
 
 .matches-wrapper {
   height: 430px;
@@ -304,7 +286,11 @@ html, body {
   background-color: var(--color-red);
 }
 
-.champion-image, .masteries, .spell, .keystone, .rune-path {
+.champion-image,
+.masteries,
+.spell,
+.keystone,
+.rune-path {
   display: inline-block;
 }
 
@@ -315,7 +301,8 @@ html, body {
   border-radius: 3px;
 }
 
-.summoner-spells img, .runes img {
+.summoner-spells img,
+.runes img {
   width: 30px;
   height: 30px;
   display: inline-block;
@@ -331,7 +318,8 @@ html, body {
   display: block;
 }
 
-.summoner-spells, .runes {
+.summoner-spells,
+.runes {
   display: inline-block;
 }
 
@@ -378,7 +366,7 @@ html, body {
   text-align: center;
 }
 
-.tooltip-content > span {
+.tooltip-content>span {
   display: block;
 }
 
@@ -391,7 +379,7 @@ html, body {
   font-size: 8px;
 }
 
-.tooltip:hover + .tooltip-content {
+.tooltip:hover+.tooltip-content {
   display: block;
 }
 
@@ -400,7 +388,8 @@ html, body {
   opacity: 1;
 }
 
-.score, .stats {
+.score,
+.stats {
   width: 100px;
 }
 
@@ -527,10 +516,11 @@ html, body {
 
 @keyframes slideInFromRight {
   from {
-      transform: translateX(100%);
+    transform: translateX(100%);
   }
+
   to {
-      transform: translateX(0);
+    transform: translateX(0);
   }
 }
 
@@ -560,7 +550,7 @@ html, body {
   color: #1F2667
 }
 
-.match > div:not(:first-child) {
+.match>div:not(:first-child) {
   margin-top: 10px;
 }
 
@@ -582,14 +572,15 @@ html, body {
 
 @keyframes rotating {
   from {
-      transform: rotate(0deg);
+    transform: rotate(0deg);
   }
+
   to {
-      transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
 
-.spinning > * {
+.spinning>* {
   animation: rotating 2s linear infinite;
 }
 
@@ -828,7 +819,7 @@ img {
   float: left;
 }
 
-.match-details-header-content > span:not(:last-child)::after {
+.match-details-header-content>span:not(:last-child)::after {
   content: '•';
   margin: 0 10px;
   color: darkgray;
@@ -841,7 +832,7 @@ img {
   justify-content: center;
 }
 
-.player-score > span {
+.player-score>span {
   display: block;
 }
 
@@ -866,14 +857,16 @@ img {
   width: 64px;
 }
 
-.match-details-content .summoner-spells img, .match-details-content .summoner-spells > div,
-.match-details-content .runes img, .match-details-content .runes > div {
+.match-details-content .summoner-spells img,
+.match-details-content .summoner-spells>div,
+.match-details-content .runes img,
+.match-details-content .runes>div {
   height: 31px;
   width: 31px;
 }
 
-.match-details-content .summoner-spells > :last-child,
-.match-details-content .runes > :last-child {
+.match-details-content .summoner-spells> :last-child,
+.match-details-content .runes> :last-child {
   margin-top: 2px;
 }
 
@@ -893,7 +886,8 @@ img {
   flex-flow: row wrap;
 }
 
-.match-details-content .rank , .match-details-content .score {
+.match-details-content .rank,
+.match-details-content .score {
   flex: 0 0 50%;
   height: fit-content;
 }
