you can click on recent summoners to search them

--- a/src/components/css/RecentPlayer.module.scss
+++ b/src/components/css/RecentPlayer.module.scss
@@ -6,6 +6,8 @@
         background-color: transparent;
         border: 0;
         border-bottom: 2px solid #3A1B71;
+        cursor: pointer;
+        outline: 0;
     }
 
     .line {
