--- a/src/components/css/SearchSummoner.module.scss
+++ b/src/components/css/SearchSummoner.module.scss
@@ -33,7 +33,8 @@
         border: 0;
         background-color: transparent;
         color: gold;
-
+        cursor: pointer;
+        outline: 0;
     }
 
     &.disabled {
